Fixed blurry image rendering

--- a/public/assets/styles/custom.css
+++ b/public/assets/styles/custom.css
@@ -381,6 +381,10 @@ textarea{
     min-height: 150px;
 }
 
+img{
+    image-rendering: -webkit-optimize-contrast;
+}
+
 .skill-title{
     font-size: 12px;
     font-weight: normal;
